Se agrego envio de mail para notificar nuevo acuerdo entre inversory estudiante

--- a/src/mailer/templates/investorAndCandidateMatch.hbs
+++ b/src/mailer/templates/investorAndCandidateMatch.hbs
@@ -201,8 +201,7 @@
                 "
               >
                 <p style="margin: 0;">
-                  Hola {{name}}. ¿Olvidaste tu contraseña? No te preocupes, haz
-                  click en el siguiente botón para restablecerla.
+                  Hola, hemos recibido un match entre un inversor y un candidato. Favor de revisar la base de datos para mas informacion y asi proceder con los contratos correspondientes
                 </p>
               </td>
             </tr>
