--- a/src/mailer/templates/preview.html
+++ b/src/mailer/templates/preview.html
@@ -150,7 +150,7 @@
                 align="center"
               >
                 <img
-                  src="./Screenshot 2023-01-11 at 12.06.02.png"
+                  src="https://storage.googleapis.com/evaluados-files-1/Screenshot%202023-01-11%20at%2012.06.02.png"
                   width="100%""
                   height="184.88px"
                   style="display: block; border: 0px;"
